Fix display bug on iPhone 3-5

--- a/app/client/public/css/sass/_calendar__row__venue.scss
+++ b/app/client/public/css/sass/_calendar__row__venue.scss
@@ -5,8 +5,8 @@
 		padding-left:0.2em;
 		padding-right:0.2em;
 
-		-webkit-flex:0 0 10em;
-				flex:0 0 10em;
+		-webkit-flex:0 1 10em;
+				flex:0 1 10em;
 	}
 
 	.venue .name {
